--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
+  google_fonts: ^6.2.0
 
 dev_dependencies:
   flutter_test:
