--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,17 @@
 name: ai_generator
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
   bloc: ^8.1.3
   flutter_bloc: ^8.1.4
-  google_fonts: ^6.2.0
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
@@ -20,20 +20,17 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 
 flutter:
-
-  
   uses-material-design: true
 
   assets:
-     - assets
+    - Asset/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  fonts:
+     - family: SixtyFour
+       fonts:
+         - asset: Asset/64.ttf
+  
+  #  - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
